# --------------------------------------------------------------
#  db
#
#  provides:
#    db.lua
#    db/Stream.lua, etc
# --------------------------------------------------------------
set(MODULE_NAME editor)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lubyk
  DESTINATION lib
)                                  
