# --------------------------------------------------------------
#  db
#
#  provides:
#    db.lua
#    db/Stream.lua, etc
# --------------------------------------------------------------
set(MODULE_NAME db)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lib
  DESTINATION ${LUBYK_LIB}
)
